# comitter

./: .env.example  .gitignore  README.md  pyproject.toml  setup_cron.sh
data/: activity.json
src/: committer.py
